# uai-engine-monorepo

./: .eslintrc.js  .gitignore  ARCHITECTURE.md  BLOCKER_FIXES.md  BLOCKER_FIXES_SUMMARY.md  HARDENING_CHANGES.md  IMPLEMENTATION_PLAN.md  Makefile  PHASE6_CHANGES.md  PHASE_COMPLETION_SUMMARY.md  README.md  RELIABILITY_FIXES.md  VALIDATION_RESULTS.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .gitignore  Dockerfile  alembic.ini  auth.py  database.py  main.py  models.py  package.json  pyproject.toml  requirements.txt  schemas.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/app/: main.py
apps/api/app/api/v1/: __init__.py  auth.py  builds.py  credits.py  projects.py  versions.py
apps/api/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
apps/api/app/models/: __init__.py  build.py  credit.py  project.py  user.py  version.py
apps/api/app/schemas/: __init__.py  auth.py  build.py  credit.py  project.py  version.py
apps/api/app/services/: build_service.py  credit_service.py  version_service.py
apps/api/config/: credits.py
apps/api/routes/: auth.py  builds.py  credits.py  preview.py  projects.py
apps/api/services/: build_service.py  credit_service.py  diff_service.py  log_sanitizer.py  project_orchestrator.py  rate_limiter.py  repair_service.py
apps/api/templates/fastapi-api/: README.md  main.py  test_main.py
apps/api/templates/nextjs-saas/: README.md  package.json
apps/api/templates/nextjs-saas/__tests__/: page.test.tsx
apps/api/templates/nextjs-stable/: README.md  package.json  tailwind.config.js
apps/api/tests/: test_preview_security.py  test_schemas_forward_refs.py  test_smoke.py
infra/: docker-compose.dev.yml  (+1 more)
(+52 files in other folders)
